[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "encryptools"
authors = [{name = "Dione Alfarisi", email = "ardionefarisi1322@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description", "requires-python", "dependencies"]

[project.urls]
Home = "https://github.com/dioneal-farisi/encryptools"